Save point for message api
